--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,7 +39,7 @@
             android:layout_width="72dp"
             android:layout_height="23dp"
             android:layout_marginStart="16dp"
-            android:text="Email"
+            android:text="@string/login_email"
             android:textAlignment="textEnd"
             app:layout_constraintBaseline_toBaselineOf="@+id/email"
             app:layout_constraintStart_toStartOf="parent" />
@@ -62,7 +62,7 @@
             android:id="@+id/textView2"
             android:layout_width="70dp"
             android:layout_height="29dp"
-            android:text="Password"
+            android:text="@string/login_password"
             android:textAlignment="textEnd"
             app:layout_constraintBaseline_toBaselineOf="@+id/password"
             app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
-            android:text="Sign Up"
+            android:text="@string/login_signup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -86,7 +86,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Log In"
+            android:text="@string/login_login"
             app:layout_constraintBottom_toBottomOf="@+id/signUp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
