--- a/app/src/main/res/layout/card_site.xml
+++ b/app/src/main/res/layout/card_site.xml
@@ -20,7 +20,7 @@
             android:layout_marginEnd="16dp" />
 
         <TextView
-            android:id="@+id/placemarkTitle"
+            android:id="@+id/siteTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -31,7 +31,7 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/placemarkTitle"
+            android:layout_below="@id/siteTitle"
             android:layout_toEndOf="@+id/imageIcon" />
 
     </RelativeLayout>
