--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,6 +14,7 @@
             android:id="@+id/action_openingScreenFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.jojartbence.archeologicalfieldwork.LoginFragment"
@@ -23,6 +24,7 @@
             android:id="@+id/action_loginFragment_to_siteListFragment"
             app:destination="@id/siteListFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/siteListFragment"
         android:name="com.jojartbence.archeologicalfieldwork.SiteListFragment"
@@ -35,14 +37,26 @@
             android:id="@+id/action_siteListFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.jojartbence.archeologicalfieldwork.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
+
     <fragment
         android:id="@+id/siteFragment"
         android:name="com.jojartbence.archeologicalfieldwork.SiteFragment"
         android:label="fragment_site"
-        tools:layout="@layout/fragment_site" />
+        tools:layout="@layout/fragment_site" >
+        <argument
+            android:name="site"
+            app:argType="com.jojartbence.model.SiteModel"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <argument
+            android:name="editSite"
+            app:argType="boolean"
+            android:defaultValue="false" />
+    </fragment>
 </navigation>
