--- a/app/src/main/res/menu/menu_sitelist.xml
+++ b/app/src/main/res/menu/menu_sitelist.xml
@@ -7,4 +7,7 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/menu_addSite"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/item_logout"
+        android:title="@string/menu_logout" />
 </menu>
