When pressing back on site list fragment, quits application

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -22,7 +22,9 @@
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_siteListFragment"
-            app:destination="@id/siteListFragment" />
+            app:destination="@id/siteListFragment"
+            app:popUpTo="@+id/openingScreenFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
