Date of visit is visible only when visited switch is on

--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -90,7 +90,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toTopOf="@+id/siteDescription" />
+                app:layout_constraintTop_toTopOf="@+id/siteDescription"
+                android:visibility="invisible" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
