--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -128,11 +128,11 @@
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="196dp"
             android:layout_height="96dp"
-            android:layout_marginTop="8dp"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/guideline7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline7" />
+            app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
