--- a/app/src/main/res/menu/menu_sitelist.xml
+++ b/app/src/main/res/menu/menu_sitelist.xml
@@ -4,9 +4,12 @@
 
     <item
         android:id="@+id/item_add"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/menu_addSite"
-        app:showAsAction="never"/>
+        android:title="@string/menu_addSite" />
+
+    <item
+        android:id="@+id/item_settings"
+        android:title="@string/menu_settings" />
+
     <item
         android:id="@+id/item_logout"
         android:title="@string/menu_logout" />
