--- a/app/src/main/res/layout/card_site.xml
+++ b/app/src/main/res/layout/card_site.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
-    android:elevation="24dp">
+    android:elevation="24dp"
+    android:focusable="true"
+    android:descendantFocusability="blocksDescendants">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -47,7 +49,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageIcon"
-            android:clickable="false"
             android:focusable="false"
             android:layoutDirection="rtl"
             android:text="@string/hint_visited"
