--- a/app/src/main/res/layout/fragment_opening_screen.xml
+++ b/app/src/main/res/layout/fragment_opening_screen.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/image_opening_screen" />
+        android:src="@drawable/image_opening_screen"
+        android:scaleType="centerCrop" />
 
 </FrameLayout>
