Label is shown user-friendly

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -92,6 +92,6 @@
     <fragment
         android:id="@+id/mapOfAllSitesFragment"
         android:name="com.jojartbence.archeologicalfieldwork.MapOfAllSitesFragment"
-        android:label="map_of_all_sites_fragment"
+        android:label="Map of all sites"
         tools:layout="@layout/map_of_all_sites_fragment" />
 </navigation>
