site layout: mark as favoutire added to menu, rating bar

--- a/app/src/main/res/menu/menu_site.xml
+++ b/app/src/main/res/menu/menu_site.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/site_markAsFavourite"
+        android:icon="@android:drawable/btn_star_big_on"
+        android:title="@string/site_markAsFavourite"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/site_save"
         android:title="@string/site_saveSite"
         app:showAsAction="always" />
