--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -93,6 +93,15 @@
                 app:layout_constraintTop_toTopOf="@+id/siteDescription"
                 android:visibility="invisible" />
 
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/addtionalNotes" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -103,7 +112,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addtionalNotes">
+                app:layout_constraintTop_toBottomOf="@+id/ratingBar">
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline2"
