Add site fragment can be opened from the navigation drawer menu

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,12 +2,12 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/nav_addSite"
-        android:icon="@drawable/ic_menu_add"
-        android:title="@string/menu_addSite" />
 
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_site"
+            android:icon="@drawable/ic_menu_add"
+            android:title="@string/menu_addSite" />
         <item
             android:id="@+id/nav_mapOfAllSites"
             android:icon="@drawable/ic_menu_map"
