Copied the location argument of the wrong navigation, now fixed. Navigator gets site title and shows as the markers title.

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -108,5 +108,10 @@
         <argument
             android:name="location"
             app:argType="com.jojartbence.model.Location" />
+        <argument
+            android:name="siteTitle"
+            app:argType="string"
+            android:defaultValue="null"
+            app:nullable="true" />
     </fragment>
 </navigation>
